deploy/k8s/development/backend-go-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-go
  namespace: chatup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-go
  template:
    metadata:
      labels:
        app: backend-go
        observability: "enabled"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: backend-go
          image: docker.io/marcotecmar/chatup-backend-go:861425311582
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-go
  namespace: chatup
  labels:
    app: backend-go
spec:
  selector:
    app: backend-go
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: metrics
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-go
  namespace: chatup
spec:
  ingressClassName: traefik
  rules:
    - host: api.chatup.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-go
                port:
                  number: 80
